Update classroom API input and output
