# classroom-svc/api/goclient/v1/classroom.pb.validate.go
@@ -169,6 +169,14 @@ func (m *ClassroomInput) validate(all bool) error {
 
 	// no validation rules for Status
 
+	// no validation rules for LecturerId
+
+	// no validation rules for CodeClassroom
+
+	// no validation rules for TopicTags
+
+	// no validation rules for Quantity
+
 	if len(errors) > 0 {
 		return ClassroomInputMultiError(errors)
 	}
@@ -276,6 +284,14 @@ func (m *ClassroomResponse) validate(all bool) error {
 	// no validation rules for Description
 
 	// no validation rules for Status
+
+	// no validation rules for LecturerId
+
+	// no validation rules for CodeClassroom
+
+	// no validation rules for TopicTags
+
+	// no validation rules for Quantity
 
 	if all {
 		switch v := interface{}(m.GetCreatedAt()).(type) {
